k8s/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: devops-app
spec:
  selector:
    app.kubernetes.io/name: web
  ports:
    - name: http
      port: 80
      targetPort: http
